url recuperacion clave

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,7 +25,7 @@ spring.mail.properties.mail.stmp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 
-mail.urlFront=http://localhost:8090/auth/reset-password/
+mail.urlFront=http://oyg-ingenieros.herokuapp.com/auth/reset-password/
 
 spring.mvc.contentnegotiation.favor-parameter=true
 spring.mvc.contentnegotiation.media-types.pdf=application/pdf
